# module_template

./: CMakeLists.txt  README.md  README.txt
Main/: CMakeLists.txt  Main.cpp
ModuleInterface/: CMakeLists.txt  ModuleInterface.cpp  ModuleInterface.h
